--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,23 @@
     <string name="single_player">Single Player</string>
     <string name="config_about">About</string>
 
+
+    <string name="saveFleet">SAVE FLEET</string>
+    <string name="Sound">Sound</string>
+
+    <string name="win">Win!!!</string>
+    <string name="russian">Russian</string>
+    <string name="classic">Classic</string>
+    <string name="standard">standard</string>
+    <string name="about">About</string>
+    <string name="winner">PLayer 1 win</string>
+
+
+
+    <string name="backgroundMusic" translatable="false">Background Music</string>
+    <string name="sound_effects" translatable="false">Sound Effects</string>
+    <string name="popup_text"  translatable="false">This is a sample</string>
+    <string name="configuration_preference_key">configuration preference</string>
+    <string name="animation_sound_key">animation sound</string>
+
 </resources>
