--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">BattleShip</string>
     <string name="launch_error">Initialization data failed</string>
@@ -11,12 +12,13 @@
 
 
     <string name="saveFleet">SAVE FLEET</string>
-
+    <!--<string name="Sound">Sound</string>-->
 
     <string name="win">Win!!!</string>
     <string name="russian">Russian</string>
     <string name="classic">Classic</string>
     <string name="standard">Standard</string>
+    <!--<string name="about">About</string>-->
     <string name="winner">PLayer 1 win</string>
 
 
@@ -24,27 +26,17 @@
     <string name="backgroundMusic" translatable="false">Background Music</string>
     <string name="sound_effects" translatable="false">Sound Effects</string>
     <string name="select_language">Select Language</string>
-    <string name="choose_language">Choose Language</string>
+    <string name="choose_language">Choose language</string>
     <string name="english">English</string>
     <string name="italian">Italian</string>
     <string name="select_flag">Select Flag</string>
     <string name="about">About</string>
 
-    <!-- Shared Preference keys -->
-    <string name="configuration_preference_key" translatable="false">configuration preference</string>
-    <string name="background_music_key" translatable="false">background_music_key</string>
-    <string name="animation_sound_key" translatable="false">animation sound</string>
-    <string name="language_key" translatable="false">language_key</string>
-    <string name="flag_key" translatable="false">flag_key</string>
+
 
     <!-- Debugging strings -->
     <string name="popup_text"  translatable="false">This is a sample</string>
-    <string name="debugging" translatable="false">debugging</string>
-    <string name="choose_flag">Choose Flag</string>
-    <string name="usa">USA</string>
-    <string name="italy">Italy</string>
     <string name="australia">Australia</string>
-    <string name="brazil">Brazil</string>
 
 
 </resources>
