--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -28,6 +28,11 @@
     <string name="english">Inglese</string>
     <string name="italian">Italiano</string>
     <string name="select_flag">Seleziona Bandiera</string>
+    <string name="choose_flag">Scegli una Bandiera</string>
+    <string name="usa">USA</string>
+    <string name="italy">Italia</string>
+    <string name="australia">Australia</string>
+    <string name="brazil">Brasile</string>
     <string name="about">About</string>
 
 
@@ -35,7 +40,7 @@
 
     <!-- Debugging strings -->
     <string name="popup_text"  translatable="false">Questo è un esempio</string>
-    <string name="australia">Australia</string>
+
 
 
 </resources>
