--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">BattleShip</string>
-    <string name="launch_error">Initialization data failed</string>
+    <!-- Hud -->
     <string name="player_name">Player Name</string>
     <string name="settings">Settings</string>
     <string name="home">Home</string>
     <string name="fleet">Fleet</string>
+
+    <!-- MainMenuFragment -->
     <string name="single_player">Single Player</string>
 
-
-
-
+    <!-- FleetFragment -->
     <string name="saveFleet">SAVE FLEET</string>
-    <!--<string name="Sound">Sound</string>-->
-
-    <string name="win">Win!!!</string>
-    <string name="russian">Russian</string>
-    <string name="classic">Classic</string>
-    <string name="standard">Standard</string>
-    <!--<string name="about">About</string>-->
-    <string name="winner">PLayer 1 win</string>
 
 
     <!--Settings menu-->
     <string name="backgroundMusic" translatable="false">Background Music</string>
     <string name="sound_effects" translatable="false">Sound Effects</string>
     <string name="select_language">Select Language</string>
-    <string name="choose_language">Choose language</string>
+    <string name="choose_language">Choose Language</string>
     <string name="english">English</string>
     <string name="italian">Italian</string>
     <string name="select_flag">Select Flag</string>
+    <string name="choose_flag">Choose Flag</string>
+    <string name="usa">USA</string>
+    <string name="italy">Italy</string>
+    <string name="australia">Australia</string>
+    <string name="brazil">Brazil</string>
     <string name="about">About</string>
 
+    <!-- ScenarioSelection Activity -->
+    <string name="russian">Russian</string>
+    <string name="classic">Classic</string>
+    <string name="standard">Standard</string>
+
+    <!-- PreMatch Fragment -->
+    <string name="start_match">Start</string>
+    <string name="time_to_set_fleet">Time Remaining</string>
+
+    <!-- Match Fragment -->
+    <string name="turn_of">TURN OF:</string>
 
 
-    <!-- Debugging strings -->
-    <string name="popup_text"  translatable="false">This is a sample</string>
-    <string name="australia">Australia</string>
+
 
 
 </resources>
