--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,9 +54,10 @@
     <string name="debugging" translatable="false">debugging</string>
 
 
-
     <string name="winner">PLayer 1 win</string>
     <string name="win">Win!!!</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
