Primo passo verso il gamplay. Impostata animazione in MainMenuFragment, la ScenarioActivity avvia una Gameactivity con il giusto livello da far visulizzare

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -10,6 +10,8 @@
 
     <!-- MainMenuFragment -->
     <string name="single_player">Giocatore Singolo</string>
+    <string name="local_game">1vs1</string>
+    <string name="online">Online</string>
 
     <!-- FleetFragment -->
     <string name="saveFleet">SALVA</string>
